--- a/public_html/join.html
+++ b/public_html/join.html
@@ -142,16 +142,16 @@
   <!-- Navigation Bar - Using glass morphism -->
   <nav class="fixed w-full top-0 z-50 transition-all duration-300" :class="{'glass shadow-lg': scrolled || menuOpen, 'bg-transparent': !scrolled && !menuOpen}">
     <div class="container mx-auto flex items-center justify-between px-6" :class="scrolled ? 'py-3' : 'py-5'">
-      <a href="index.html" class="relative z-10 text-xl sm:text-2xl font-semibold tracking-tight flex items-center">
+      <a href="/" class="relative z-10 text-xl sm:text-2xl font-semibold tracking-tight flex items-center">
         <span class="text-primary-400 mr-1">&#60;</span>
         <span class="text-primary-400">Coding Reno</span>
         <span class="text-primary-400 ml-1">&#62;</span>
       </a>
       <div class="hidden md:flex items-center space-x-8">
-        <a href="index.html#projects" class="text-sm font-medium hover:text-primary-400 transition">Projects</a>
-        <a href="index.html#community" class="text-sm font-medium hover:text-primary-400 transition">Community</a>
-        <a href="project-showcase.html" class="text-sm font-medium hover:text-primary-400 transition">Showcase</a>
-        <a href="join.html" class="pill-button text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
+        <a href="/#projects" class="text-sm font-medium hover:text-primary-400 transition">Projects</a>
+        <a href="/#community" class="text-sm font-medium hover:text-primary-400 transition">Community</a>
+        <a href="/showcase" class="text-sm font-medium hover:text-primary-400 transition">Showcase</a>
+        <a href="/join" class="pill-button text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
       </div>
       <button @click="menuOpen = !menuOpen" class="md:hidden focus:outline-none">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -164,10 +164,10 @@
 
   <!-- Mobile Menu - Moved outside nav and added overlay styles -->
   <div x-show="menuOpen" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 mt-0 bg-gray-900 z-40">
-    <a href="index.html#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Projects</a>
-    <a href="index.html#community" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Community</a>
-    <a href="project-showcase.html" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Showcase</a>
-    <a href="join.html" @click="menuOpen = false" class="pill-button block text-center text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
+    <a href="/#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Projects</a>
+    <a href="/#community" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Community</a>
+    <a href="/showcase" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Showcase</a>
+    <a href="/join" @click="menuOpen = false" class="pill-button block text-center text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
   </div>
 
   <!-- Header Section -->
