added join logo

--- a/public_html/join.html
+++ b/public_html/join.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Join Coding Club Reno</title>
+  <link rel="icon" type="image/png" href="images/codingrenologo.png"> 
   <meta name="description" content="Join Coding Club Reno - a community of developers who learn and grow together through project-based experiences.">
   <meta name="keywords" content="coding, programming, community, projects, service, learning, club, reno, volunteer, development">
   <meta name="author" content="Coding Club Reno">
