--- a/public_html/project-showcase.html
+++ b/public_html/project-showcase.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project Showcase - Coding Reno</title>
+  <link rel="icon" type="image/png" href="images/codingrenologo.png"> 
   <!-- Google Font - Using Inter for clean modern look -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <!-- Tailwind CSS -->
